--- a/src/scss/wrappers.scss
+++ b/src/scss/wrappers.scss
@@ -16,14 +16,14 @@
 }
 
 .wrapperLogo {
-	width: 30px;
 	margin: 0 auto;
+	width: 30px;
 }
 
 .wrapperCard {
-	width: 100%;
 	height: 100%;
 	position: relative;
+	width: 100%;
 }
 
 .wrapperProject--Details {
@@ -34,8 +34,8 @@
 .wrapperHexagon {
 	height: 200px;
 	left: 50%;
-	margin-top: -105px;
 	margin-left: -50px;
+	margin-top: -105px;
 	position: absolute;
 	top: 60%;
 	width: 100px;
@@ -43,26 +43,26 @@
 }
 
 .wrapperMenu {
-	height: 24px;
-	margin-top: 20px;
-	margin-bottom: 20px;
 	display: flex;
 	flex-direction: row;
+	height: 24px;
 	justify-content: center;
+	margin-bottom: 25px;
+	margin-top: 20px;
 }
 
 .wrapperMenu svg {
-	width: 17px;
 	height: auto;
 	margin-right: 5px;
+	width: 17px;
 }
 
 .wrapperDesignerDetails {
-	height: 40%;
+	align-items: center;
 	display: flex;
 	flex-direction: column;
+	height: 40%;
 	justify-content: center;
-	align-items: center;
 }
 
 // DANIEL
@@ -72,9 +72,9 @@
 
 .close {
 	color: $lightPink;
-	text-shadow: none;
-	opacity: 1;
 	font-size: 2.5rem;
+	opacity: 1;
+	text-shadow: none;
 }
 
 .close:hover {
@@ -106,8 +106,8 @@
 }
 
 .designerBar__image {
-	width: 100%;
 	height: 100%;
+	width: 100%;
 }
 
 .designerBar__info--user {
@@ -123,9 +123,9 @@
 }
 
 .projectImage {
+	cursor: pointer;
 	height: 100%;
 	width: 100%;
-	cursor: pointer;
 }
 
 // MIKES MEDIA
@@ -143,10 +143,9 @@
 
 @media screen and (max-width: 500px) {
 	.wrapperMenu {
+		display: block;
 		height: auto;
-		margin-top: 20px;
 		margin-bottom: 20px;
-		flex-direction: column;
-		align-items: center;
+		margin-top: 20px;
 	}
 }
